--- a/index.html
+++ b/index.html
@@ -130,21 +130,33 @@
                 <div class="proyects">
 
                     <a href="https://arturoromero95.github.io/Abogados/" target="_blank"><img src="./Images/ley.png" alt=""></a>
-                    <p>Web creada utilizando HTML5 y CSS. Simula una página estática en la que se incluyen elementos como los servicios, miembros y forma de contacto de un despacho jurídico ficticio.</p>
+                    <p>Web creada utilizando HTML5 y CSS. Simula una página estática en la que se incluyen elementos como los servicios, miembros y forma de contacto de un despacho jurídico ficticio.
+                        <br>
+                        <br>
+                    <a href="https://arturoromero95.github.io/Abogados/" target="_blank">¡Visita mi proyecto aqui o dando clic al icono!</a>
+                    </p>
 
                 </div>
 
                 <div class="proyects">
 
                     <a href="https://arturoromero95.github.io/Ecommerce/index.html" target="_blank"><img src="./Images/comic.png" alt=""></a>
-                    <p>Sitio web creado con HTML5, CSS y JAVASCRIPT en el cual se simula el funcionamiento de un Ecommerce ficticio enfocado en la venta de cómics.</p>
+                    <p>Sitio web creado con HTML5, CSS y JAVASCRIPT en el cual se simula el funcionamiento de un Ecommerce ficticio enfocado en la venta de cómics.
+                        <br>
+                        <br>
+                    <a href="https://arturoromero95.github.io/Ecommerce/index.html" target="_blank">¡Visita mi proyecto aqui o dando clic al icono!</a>
+                    </p>
 
                 </div>
 
                 <div class="proyects">
 
                     <a href="https://vivirsinlimites.com.mx/" target="_blank"><img src="./Images/medico.png" alt=""></a>
-                    <p>Proyecto enfocado al sector salud en el que se colaboró con un equipo. Mi función fue la programación, maquetación y estilización de la mayor parte de la web.</p>
+                    <p>Proyecto enfocado al sector salud en el que se colaboró con un equipo. Mi función fue la programación, maquetación y estilización de la mayor parte de la web.
+                        <br>
+                        <br>
+                    <a href="https://vivirsinlimites.com.mx/" target="_blank">¡Visita mi proyecto aqui o dando clic al icono!</a>
+                    </p>
 
                 </div>
 
